<resources>
    <!--        App Metadata Start       -->
    <string name="app_name">WS Deck Editor</string>
    <!--        App Metadata End         -->

    <!--        Data Related Start       -->
    <string name="card_image">Image</string>
    <string name="card_name">Name</string>
    <string name="card_serial">Serial</string>
    <string name="card_expansion">Expansion</string>
    <string name="card_rarity">Rarity</string>
    <string name="card_side">Side</string>
    <string name="card_type">Type</string>
    <string name="card_color">Color</string>
    <string name="card_level">Level</string>
    <string name="card_cost">Cost</string>
    <string name="card_power">Power</string>
    <string name="card_soul">Soul</string>
    <string name="card_trigger">Trigger</string>
    <string name="card_attribute">Attribute</string>
    <string name="card_text">Text</string>
    <string name="card_flavor_text">Flavor Text</string>
    <string name="card_total">Total</string>

    <string name="type_chara">Character</string>
    <string name="type_climax">Climax</string>
    <string name="type_event">Event</string>

    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>

    <string name="trigger_none">None</string>
    <string name="trigger_1s">One Soul</string>
    <string name="trigger_2s">Two Soul</string>
    <string name="trigger_wind">Wind</string>
    <string name="trigger_fire">Fire</string>
    <string name="trigger_bag">Bag</string>
    <string name="trigger_gold">Gold</string>
    <string name="trigger_door">Door</string>
    <string name="trigger_book">Book</string>
    <string name="trigger_gate">Gate</string>

    <string name="side_w">Weib</string>
    <string name="side_s">Schwarz</string>
    <!--        Data Metadata End         -->

    <!--      Condition Related Start     -->
    <string name="filter_keyword">Keyword</string>
    <string name="filter_serial">@string/card_serial</string>
    <string name="filter_name">@string/card_name</string>
    <string name="filter_attr">@string/card_attribute</string>
    <string name="filter_text">@string/card_text</string>
    <string name="filter_expansion">@string/card_expansion</string>
    <string name="filter_side">@string/card_side</string>
    <string name="filter_type">@string/card_type</string>
    <string name="filter_color">@string/card_color</string>
    <string name="filter_level_max">Max Level</string>
    <string name="filter_level_min">Min Level</string>
    <string name="filter_cost_max">Max Cost</string>
    <string name="filter_cost_min">Min Cost</string>
    <string name="filter_power_max">Max Power</string>
    <string name="filter_power_min">Min Power</string>
    <string name="filter_soul_max">Max Soul</string>
    <string name="filter_soul_min">Min Soul</string>
    <string name="filter_trigger">@string/card_trigger</string>
    <string name="filter_and">And</string>
    <string name="filter_not">Not</string>
    <string name="filter_normal_only">Normal Only</string>

    <string name="filter_dialog_expansion">@string/filter_expansion</string>
    <string name="filter_dialog_side">@string/filter_side</string>
    <string name="filter_dialog_type">@string/filter_type</string>
    <string name="filter_dialog_color">@string/filter_color</string>
    <string name="filter_dialog_level">@string/card_level</string>
    <string name="filter_dialog_cost">@string/card_cost</string>
    <string name="filter_dialog_power">@string/card_power</string>
    <string name="filter_dialog_soul">@string/card_soul</string>
    <string name="filter_dialog_trigger">@string/filter_trigger</string>
    <string name="filter_dialog_and">@string/filter_and</string>
    <string name="filter_dialog_not">@string/filter_not</string>
    <string name="filter_dialog_normal_only">@string/filter_normal_only</string>
    <!--       Condition Related End      -->

    <!--            Menu Start            -->
    <string name="nav_search">Search</string>
    <string name="nav_card_list">Card Lists</string>
    <string name="nav_update">Update</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>
    <string name="nav_deck_edit">Deck Edit</string>
    <string name="nav_qr">Scan QR</string>

    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <string name="nav_cat_system">System</string>

    <string name="menu_filter_exp">Filter Expansions</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_filter_cards">Filter Cards</string>
    <string name="menu_filter_decks">Filter Decks</string>
    <string name="menu_sorting">Sorting</string>
    <string name="menu_delete_deck">Delete Deck</string>
    <string name="menu_duplicate_deck">Duplicate Deck</string>
    <string name="menu_deck_info">Deck Info</string>
    <string name="menu_share_deck">Share Deck</string>
    <string name="menu_add_deck">Add Deck</string>
    <!--             Menu End             -->

    <!--           Dialog Start           -->
    <string name="dialog_select_your_deck">Select Your Deck</string>
    <string name="dialog_create_a_new_deck">Create A New Deck</string>
    <string name="dialog_rename_deck">Rename Deck</string>
    <string name="dialog_change_card_count">Change Card Count</string>
    <string name="dialog_deck_name">Deck Name</string>
    <string name="dialog_sort_by">Sort By</string>
    <string name="dialog_load_version">Loading latest version</string>
    <string name="dialog_download_res">Download Resources</string>
    <string name="dialog_deck_info">Deck Info</string>
    <string name="dialog_share_deck">Share Deck</string>
    <string name="dialog_delete_deck">Delete this deck?</string>
    <string name="dialog_update_database">Update Database</string>
    <string name="dialog_update_images">Update Images</string>
    <string name="dialog_download_all_images">Download All Images</string>

    <string name="dialog_count">Count</string>
    <string name="dialog_wait_message">Please wait</string>
    <string name="dialog_search_area">Search Area</string>

    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_create_button">Create</string>
    <string name="dialog_rename_button">Rename</string>
    <string name="dialog_apply_button">Apply</string>
    <string name="dialog_select_button">Select</string>
    <string name="dialog_new_button">New</string>
    <string name="dialog_update_db_button">Update Database</string>
    <string name="dialog_update_images_button">Update Images</string>
    <string name="dialog_download_all_images_button">Download All Images</string>
    <string name="dialog_add_button">Add</string>
    <string name="dialog_share_button">Share</string>
    <!--            Dialog End            -->

    <!--           Message Start          -->
    <string name="msg_deck_duplicated">Deck duplicated.</string>
    <string name="msg_deck_saved">Deck saved.</string>
    <string name="msg_add_to_deck">Added to deck.</string>
    <string name="msg_update_started">Update started.</string>
    <string name="msg_update_database">Database updated.</string>
    <string name="msg_update_image">Image updated.</string>
    <string name="msg_network_err">Network error. Please check your network and try again.</string>
    <string name="msg_invalid_qr">Invalid QR code.</string>
    <string name="msg_camera_error">Camera Error.</string>
    <string name="msg_no_deck">No deck found.</string>
    <string name="msg_no_camera">No camera detected.</string>
    <string name="msg_no_search_condition">Please add at least one condition.</string>
    <string name="msg_too_many_cards">You have too many cards in that deck.</string>
    <string name="msg_select_too_many">You have selected too many cards.</string>
    <string name="msg_high_card_count">The card count is too high.</string>
    <string name="msg_invalid_deck">The deck is not valid.</string>
    <!--            Message End           -->

    <!--            Display Start         -->
    <string name="format_card_level">Lv.%s</string>
    <string name="format_card_detail">%1$s Lv.%2$d %3$s</string>
    <string name="format_card_detail_cx">-\n%s</string>
    <string name="format_latest_version">Latest Version: %s</string>
    <string name="format_current_version">Current Version: %s</string>
    <string name="format_info_string">%1$s: %2$d</string>
    <string name="format_info_string_lvl">Lv.%1$s: %2$d</string>
    <string name="not_applicable_value">-</string>

    <string name="op_lesser">&lt;</string>
    <string name="op_lesser_eq">&lt;=</string>
    <string name="op_greater">&gt;</string>
    <string name="op_greater_eq">&gt;=</string>
    <string name="op_eq">=</string>
    <!--             Display End          -->

    <!--          Preference Start        -->
    <string name="pref_auto_save">autoSave</string>
    <string name="pref_hide_normal">hideNormal</string>
    <string name="pref_auto_close">autoClose</string>
    <string name="pref_show_limit">showLimit</string>
    <string name="pref_sort_order">sortOrder</string>
    <string name="pref_pop_back">popBack</string>

    <string name="pref_auto_save_title">Auto Save Deck</string>
    <string name="pref_hide_normal_title">Show normal card only</string>
    <string name="pref_auto_close_title">Auto close select mode</string>
    <string name="pref_show_limit_title">Card limit shown</string>
    <string name="pref_pop_back_title">Reset Back Stack</string>

    <string name="pref_auto_save_summary">Any changes made to the deck will be saved automatically.</string>
    <string name="pref_hide_normal_summary">Hide all the RRR, SR, XR, SP.</string>
    <string name="pref_auto_close_summary">Close select mode after adding cards to deck or no card is selected.</string>
    <string name="pref_show_limit_summary">Number of cards show at the same time.</string>
    <string name="pref_pop_back_summary">(Recommended) Reset back stack when pressing on navigation to reduce memory usage.</string>

    <string name="pref_cat_common">Common</string>
    <string name="pref_cat_deck_edit">@string/nav_deck_edit</string>
    <string name="pref_cat_misc">Miscellaneous</string>

    <string name="default_show_limit">200</string>
    <!--           Preference End         -->

    <!--         Accessibility Start      -->
    <string name="acb_ws_logo">Weib Schwarz Logo</string>
    <string name="acb_qr">QR Code</string>
    <string name="acb_card_image">Card Image</string>
    <string name="acb_card_side">Card Side</string>
    <string name="acb_icon">Icon</string>
    <!--          Accessibility End       -->

    <string name="placeholder_text">Place Holder</string>
    <string name="search_result">Search Result</string>

    <string-array name="sort_type">
        <item>@string/card_serial</item>
        <item>@string/card_level</item>
        <item>Detail</item>
    </string-array>

    <string-array name="deck_option">
        <item>Rename</item>
        <item>Duplicate</item>
    </string-array>

    <string-array name="search_area">
        <item>@string/card_name</item>
        <item>@string/card_serial</item>
        <item>@string/card_attribute</item>
        <item>@string/card_text</item>
    </string-array>

    <string-array name="card_normal">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>
