<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_cat_common">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_hide_normal"
            android:summary="@string/pref_hide_normal_summary"
            android:title="@string/pref_hide_normal_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cat_deck_edit">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_auto_save"
            android:summary="@string/pref_auto_save_summary"
            android:title="@string/pref_auto_save_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_auto_close"
            android:summary="@string/pref_auto_close_summary"
            android:title="@string/pref_auto_close_title" />
    </PreferenceCategory>
</PreferenceScreen>