<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="10"
        android:title="@string/menu_deck_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="20"
        android:title="@string/menu_sorting"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="30"
        android:title="@string/menu_share_deck"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="40"
        android:title="@string/menu_delete_deck"
        app:showAsAction="ifRoom" />
</menu>